# Classie-backend

./: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js
app/: main.py
app/api/: deps.py  router.py
app/api/endpoints/: assignments.py  auth.py  submissions.py  sync.py  teams.py  users.py
app/core/: config.py  security.py
app/crud/: crud_assignment.py  crud_submission.py  crud_sync.py  crud_team.py  crud_user.py
app/db/: database.py  models.py
app/schemas/: assignment.py  base.py  submission.py  sync.py  team.py  user.py
app/services/: google_auth.py
models/: AssignmentMeta.js  AssignmentSubmission.js  Student.js
myapi/: db.py  main.py  models.py
myapi/routes/: assignments.py  submissions.py  teams.py  users.py
routes/: assignments.js
